--- a/01-JS Drum Kit/index.html
+++ b/01-JS Drum Kit/index.html
@@ -46,6 +46,44 @@
       <span class="sound">tink</span>
     </div>
   </div>
-  
+
+  <audio data-key="65" src="sound/Drum Kit_sounds_clap.wav"></audio>
+  <audio data-key="83" src="sound/Drum Kit_sounds_hihat.wav"></audio>
+  <audio data-key="68" src="sound/Drum Kit_sounds_kick.wav"></audio>
+  <audio data-key="70" src="sound/Drum Kit_sounds_openhat.wav"></audio>
+  <audio data-key="71" src="sound/Drum Kit_sounds_boom.wav"></audio>
+  <audio data-key="72" src="sound/Drum Kit_sounds_ride.wav"></audio>
+  <audio data-key="74" src="sound/Drum Kit_sounds_snare.wav"></audio>
+  <audio data-key="75" src="sound/Drum Kit_sounds_tom.wav"></audio>
+  <audio data-key="76" src="sound/Drum Kit_sounds_tink.wav"></audio>
+
+<script>
+  (function(){
+      // keydown:按著不放
+    window.addEventListener('keydown',playSound);
+    
+    function playSound(e){
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+
+      if(!audio) return;
+      
+      const dom = document.querySelector(`div[data-key="${e.keyCode}"]`);
+      dom.classList.add('playing');
+      // 讓音效不會延遲播放
+      audio.currentTime = 0;
+      audio.play();
+
+      // 每一個key播放完音效後要移除動畫
+      document.querySelectorAll('.key').forEach(function(key){
+        key.addEventListener('transitionend', transitionend)
+      })
+
+      function transitionend(e){
+        if(e.propertyName !== 'transform') return;
+        e.target.classList.remove('playing');
+      }
+    }
+  })()
+  </script>
 </body>
 </html>
